Settings, Contact, Toolbar with tabs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="Open">Open</string>
     <string name="Close">Close</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="emails_array">
+        <item>Email 1</item>
+        <item>Email 2</item>
+    </string-array>
 </resources>
