--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="buttonCancel">Cancel</string>
 
     <string-array name="emails_array">
-        <item>Email 1</item>
-        <item>Email 2</item>
+        <item>drug.clan95@gmail.com</item>
+        <item>nemanja.gavrilovic1995@gmail.com</item>
     </string-array>
     <string name="title_activity_maps">Map</string>
 </resources>
