--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PMA</string>
+    <string name="app_name">Restriction news</string>
     <string name="Open">Open</string>
     <string name="Close">Close</string>
     <string name="SelectDate">Select date</string>
